@@ -10,6 +10,7 @@ Process Hacker
    * Added option to hide driver services
    * Added menu item to copy individual cells
    * Improved module scanning
+   * Added Start Task Manager menu item
    * Added Image base to peview
    * Updated ExtendedTools plugin:
      * Added support for new system information window
